--- a/client/contact.html
+++ b/client/contact.html
@@ -41,7 +41,7 @@
                       <i class="material-icons circle green">contacts</i>
                       <span class="title">James Jass</span>
                       <p>10th Grade<br><!--Morale-->Support</p>
-                      <a href="#!" class="secondary-content"><i class="material-icons">email</i></a>
+                      <a href="mailto:jmjass3000@gmail.com" class="secondary-content"><i class="material-icons">email</i></a>
                     </li>
                     <li class="collection-item avatar">
                       <i class="material-icons circle">contacts</i>
@@ -53,45 +53,9 @@
                       <i class="material-icons circle orange">contacts</i>
                       <span class="title">Thomas Denning</span>
                       <p>10th Grade<br><!--Morale-->Support</p>
-                      <a href="#!" class="secondary-content"><i class="material-icons">email</i></a>
+                      <a href="mailto:tomodenning1@gmail.com" class="secondary-content"><i class="material-icons">email</i></a>
                     </li>
                   </ul>
-                <!--<table class="responsive-table">
-                    <thead>
-                      <tr>
-                          <th>Name</th>
-                          <th>Contribution</th>
-                          <th>Email</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Benjamin Bousquet</td>
-                            <td>Web Development and Main Coder</td>
-                            <td><a class="black-text" href="mailto:bousquetb63@gmail.com">bousquetb63@gmail.com</a></td>
-                        </tr>
-                        <tr>
-                            <td>Evan Hao</td>
-                            <td>Assistance in Coding and Web Dev</td>
-                            <td><a class="black-text" href="mailto:hao.amazing@gmail.com">hao.amazing@gmail.com</a></td>
-                            </tr>
-                        <tr>
-                            <td>Jon Bousquet</td>
-                            <td>Art</td>
-                            <td><a class="black-text" href="mailto:jonbou4@gmail.com">jonbou4@gmail.com</a></td>
-                        </tr>
-                        <tr>
-                            <td>James Jass</td>
-                            <td><!--Morale--Support</td>
-                            <td><a class="black-text" href="#">Link 1</a></td>
-                        </tr>
-                        <tr>
-                            <td>Thomas Denning</td>
-                            <td><!--Morale--Support</td>
-                            <td><a class="black-text" href="#">Link 1</a></td>
-                        </tr>
-                    </tbody>
-                </table>-->
             </div>
         </body>
     </head>
